--- a/Landing Pages/landingPages.css
+++ b/Landing Pages/landingPages.css
@@ -197,23 +197,37 @@ a:active {
   width: 10%;
 }
 
-.contactButton {
-  margin-top: 5px;
-  -webkit-border-radius: 44;
-  -moz-border-radius: 44;
-  border-radius: 7px;
-  font-family: 'Montserrat', sans-serif;
-  color: #ffffff;
-  font-size: 20px;
-  background: #B0BC22;
-  padding: 15px 20px 15px 20px;
-  text-decoration: none;
-  border-width: 0px;
+.truefabButton1 {
+color: #fff !important;
+display: inline-block;
+position: relative;
+border: none;
+font-family: 'Nunito', "Helvetica Neue",Arial,Helvetica,sans-serif;
+font-size: 16px;
+line-height: 1.6875;
+font-weight: bold;
+text-align: center;
+letter-spacing: .02em;
+text-decoration: none;
+padding: 0.57143em 1.42857em;
+max-width: 100%;
+-webkit-font-smoothing: antialiased;
+-webkit-border-radius: 4px 4px 4px 4px;
+-moz-border-radius: 4px 4px 4px 4px;
+border-radius: 4px 4px 4px 4px;
+-o-transition: all 0.2s ease;
+-moz-transition: all 0.2s ease;
+-webkit-transition: all 0.2s ease;
+transition: all 0.2s ease;
+background: #B7B7B7;
 }
+.truefabButton1:hover {
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  -o-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
 
-.contactButton:hover {
-  background: #c4d333;
-  text-decoration: none;
 }
 
 #sidebar
@@ -336,26 +350,53 @@ a:active {
 
   #sidebar li {
     margin-bottom: 0px;
-    border-bottom: 1px solid #777777;
+    border-bottom: 1px solid #ccc;
     width: 102%;
     margin-left: -20px;
     padding-left: 20px;
   }
 
-
   .tfTwoPanels{
     width: 100%;
     display: block;
+    background: transparent;
+    padding:0;
+  }
+
+  .tfTwoPanels h1, .tfTwoPanels h2, .tfTwoPanels h3, .tfTwoPanels h4, .tfTwoPanels p, .tfTwoPanels img {
+    position: fixed;
+    left: -9999px;
+    color: red;
   }
 
   .tfThreePanels{
     width: 100%;
     display: block;
+    background: transparent;
+    padding:0;
+  }
+
+  .tfThreePanels h1, .tfThreePanels h2, .tfThreePanels h3, .tfThreePanels h4, .tfThreePanels p, .tfThreePanels img {
+    position: fixed;
+    left: -9999px;
+    color: red;
   }
 
   .tfFourPanels{
     width: 100%;
     display: block;
+    background: transparent;
+    padding:0;
+  }
+
+  .tfFourPanels h1, .tfFourPanels h2, .tfFourPanels h3, .tfFourPanels h4, .tfFourPanels p, .tfFourPanels img {
+    position: fixed;
+    left: -9999px;
+    color: red;
+  }
+
+  .truefabButton1{
+    width: 100%;
   }
 
 }
