--- a/Landing Pages/landingPages.css
+++ b/Landing Pages/landingPages.css
@@ -15,10 +15,15 @@ F A B R I C A T I O N S
 /* ~~~Google Fonts~~~ */
 
 @import url(http://fonts.googleapis.com/css?family=Nunito:300);
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600);
 @import url(http://fonts.googleapis.com/css?family=Lato);
-@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed);
-@import url(http://fonts.googleapis.com/css?family=Roboto);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,100);
+@import url(http://fonts.googleapis.com/css?family=Montserrat);
+@import url(http://fonts.googleapis.com/css?family=Fjalla+One);
+@import url(http://fonts.googleapis.com/css?family=Pathway+Gothic+One);
+@import url(http://fonts.googleapis.com/css?family=EB+Garamond);
+
 
 /* ~~~Links~~~ */
 
@@ -49,9 +54,10 @@ a:active {
 /* body text */
 
 .tfBodyText {
-  font-family: 'Montserrat', sans-serif;
-    margin-left: 0px;
-    margin-right: 0px;
+  font-family: Helvetica, Arial, sans-serif;
+  color: #666666;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 /* page titles */
@@ -62,18 +68,15 @@ a:active {
 
 /* main headings */
 .tfBodyText h3{
-  font-size: 1.5em;
-  font-family: 'Montserrat', sans-serif;
-  color: #b0bc22;
-  font-weight: normal;
-  line-height: 30px;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  font-size: 2em;
+  color: #666666;
+  font-weight: 300;
 }
 
 /* sub-headings */
 .tfBodyText h4{
-  font-size: 1.25em;
+  font-size: 1.5em;
   font-family: 'Montserrat', sans-serif;
   margin-top: 1em;
   margin-bottom: 1em;
@@ -107,9 +110,10 @@ a:active {
 
 .tfBodyText p{
   font-size: 1em;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  font-family: 'Avenir', 'Arial', sans-serif;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  font-weight: 400;
+  color: #666666;
+  line-height: 18px;
 }
 
 
@@ -154,8 +158,6 @@ a:active {
   width: 100%;
 }
 
-
-
 .tfFourPanels{
   vertical-align: top;
   width: 24%;
@@ -170,11 +172,13 @@ a:active {
 }
 
 .brandLogo {
-  margin: 20px auto;
+  margin: 0 auto;
 }
 
 .brandLogo img {
   width: 10%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .truefabButton1 {
@@ -210,6 +214,24 @@ background: #B7B7B7;
 
 }
 
+.viskiButton1 {
+color: #fff;
+display: inline-block;
+position: relative;
+border: none;
+font-family: 'Nunito', "Helvetica Neue",Arial,Helvetica,sans-serif;
+font-size: 14px;
+line-height: 1.6875;
+font-weight: bold;
+text-align: center;
+letter-spacing: .02em;
+text-decoration: none;
+padding: 0.57143em 1.42857em;
+max-width: 100%;
+-webkit-font-smoothing: antialiased;
+background: #B7B7B7;
+}
+
 .sidebar
 {
   float: left;
@@ -223,21 +245,30 @@ background: #B7B7B7;
   }
 
   .sidebar li {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    font-size: 1em; 
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    letter-spacing: .02em;
+    font-size: .9em; 
     line-height: 1.75em;
-    font-weight: 100;
+    font-weight: 300;
   }
 
   .sidebar h5 {
-    font-family: 'Roboto Condensed', Montserrat, sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    color: #666666;
     letter-spacing: .03em;
     text-transform: uppercase;
     font-weight: 300;
     font-size: 1.1em; 
     line-height: 2em;
     font-weight: 100;
+  }
+
+      .sidebar a {
+    color: #666666;
+  }
+
+        .sidebar a:hover {
+    color: #B0BC22;
   }
 
 /* ----Individual Pages----- */
@@ -277,45 +308,55 @@ background: #B7B7B7;
 #faq{
    max-width: 600px;
    float: left; 
-   margin-left: 240px;
+   margin-left: 200px;
 }
 
-#faq h5{
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 1.75em;
-  font-weight: 300;
-  line-height: 4em;
-  letter-spacing: 1px;
-  color: #b0bc22;
+#faq h4{
+  margin-top: 2.5em;
+  margin-bottom: 2em;
 }
-
-
 
 #shipping {
-  max-width: 600px; float: left; margin-left: 240px;
+  max-width: 600px; float: left; margin-left: 200px;
 }
 
 #guarantee {
-  max-width: 800px; float: left; margin-left: 240px;
+  max-width: 800px; float: left; margin-left: 200px;
 }
 
-#who h3{
-  color: #666666;
-  text-align: :left;
-  font-size: 1.5em;
+#guarantee h3 {
+  text-align: center;
 }
 
+#brands {
+  max-width: 800px; float: left; margin-left: 200px;
+}
 
-#returns {
-  max-width: 800px; float: left; margin-left: 240px;
+#brands {
+  text-align: center;
 }
 
 #who {
-  max-width: 800px; float: left; margin-left: 240px;
+  max-width: 800px; float: left; margin-left: 200px;
 }
 
+#who h3{
+  text-align: center;
+}
 
+#returns {
+  max-width: 800px; float: left; margin-left: 200px;
+}
 
+#contact {
+
+  float: left; margin-left: 200px
+}
+
+#ViskiPage {
+
+  max-width: 800px; float: left; margin-left: 200px;
+}
 
 
 /* --- Mobile Optimize --- */
@@ -337,14 +378,33 @@ background: #B7B7B7;
     margin-left: 0px;
   }
 
+  #guarantee {
+    width: auto;
+    margin-left: 0px;
+  }
+
+  #brands {
+    width: auto;
+    margin-left: 0px;
+  }
+
   #shipping {
+    width: auto;
+    margin-left: 0px;
+  }
+
+  #ViskiPage {
+    width: auto;
+    margin-left: 0px;
+  }
+
+  #viski {
     width: auto;
     margin-left: 0px;
   }
 
   .tfBodyText{
     width: auto;
-    margin-top: -40px;
   }
 
     .sidebar {
@@ -374,7 +434,7 @@ background: #B7B7B7;
     left: -9999px;
     color: red;
   }
-
+a
   .tfThreePanels{
     width: 100%;
     display: block;
@@ -392,6 +452,7 @@ background: #B7B7B7;
   .truefabButton1{
     width: 100%;
   }
-
-}
+  .viskiButton1{
+    width: 100%;
+  }
 
