--- a/Landing Pages/landingPages.css
+++ b/Landing Pages/landingPages.css
@@ -23,6 +23,10 @@ F A B R I C A T I O N S
 @import url(http://fonts.googleapis.com/css?family=Fjalla+One);
 @import url(http://fonts.googleapis.com/css?family=Pathway+Gothic+One);
 @import url(http://fonts.googleapis.com/css?family=EB+Garamond);
+@import url(http://fonts.googleapis.com/css?family=Khula:400,300);
+@import url(http://fonts.googleapis.com/css?family=Quicksand:300,400);
+@import url(http://fonts.googleapis.com/css?family=Raleway:200,300);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:300,700,100,400);
 
 
 /* ~~~Links~~~ */
@@ -232,11 +236,13 @@ max-width: 100%;
 background: #B7B7B7;
 }
 
+
 .sidebar
 {
   float: left;
   width: 200px;
   position: fixed;
+  display: inline-block;
 }
 
   .sidebar ul {
@@ -269,6 +275,14 @@ background: #B7B7B7;
 
         .sidebar a:hover {
     color: #B0BC22;
+  }
+
+  .bodyEnd{
+    clear:both;
+  }
+
+  .tfHidden{
+    display: none;
   }
 
 /* ----Individual Pages----- */
@@ -307,8 +321,9 @@ background: #B7B7B7;
 
 #faq{
    max-width: 600px;
-   float: left; 
+   float: none; 
    margin-left: 200px;
+   display: inline-block;
 }
 
 #faq h4{
@@ -317,11 +332,11 @@ background: #B7B7B7;
 }
 
 #shipping {
-  max-width: 600px; float: left; margin-left: 200px;
+  max-width: 600px; float: none; display: inline-block;
 }
 
 #guarantee {
-  max-width: 800px; float: left; margin-left: 200px;
+  max-width: 800px; float: none; display: inline-block;
 }
 
 #guarantee h3 {
@@ -329,7 +344,7 @@ background: #B7B7B7;
 }
 
 #brands {
-  max-width: 800px; float: left; margin-left: 200px;
+  max-width: 800px; float: none; display: inline-block;
 }
 
 #brands {
@@ -337,7 +352,10 @@ background: #B7B7B7;
 }
 
 #who {
-  max-width: 800px; float: left; margin-left: 200px;
+  max-width: 800px; 
+  margin: auto;
+  display: inline-block;
+  float: none;
 }
 
 #who h3{
@@ -345,17 +363,17 @@ background: #B7B7B7;
 }
 
 #returns {
-  max-width: 800px; float: left; margin-left: 200px;
+  max-width: 800px; float: none; display: inline-block;
 }
 
 #contact {
 
-  float: left; margin-left: 200px
+  float: none; display: inline-block;
 }
 
 #ViskiPage {
 
-  max-width: 800px; float: left; margin-left: 200px;
+  max-width: 800px; display: inline-block; float: none;
 }
 
 
@@ -407,20 +425,19 @@ background: #B7B7B7;
     width: auto;
   }
 
-    .sidebar {
-  width: 100%;
-  display: inline-block;
-  text-align: left;
-  position: relative;
+  .sidebar {
+    width: 100%;
+    text-align: left;
+    position: relative;
   }
 
-  .sidebar li {
-    margin-bottom: 0px;
-    border-bottom: 1px solid #ccc;
-    width: 102%;
-    margin-left: -20px;
-    padding-left: 20px;
-  }
+    .sidebar li {
+      margin-bottom: 0px;
+      border-bottom: 1px solid #ccc;
+      width: 102%;
+      margin-left: -20px;
+      padding-left: 20px;
+    }
 
   .tfTwoPanels{
     width: 100%;
@@ -456,3 +473,116 @@ a
     width: 100%;
   }
 
+  /* ~~~True Slider~~ */
+
+  /* ~~~Viski Slider Styles~~~ */
+
+.viskiSlide {
+  width: 100%;
+  text-align: center;
+}
+.viskiSlide h4 {
+  font-size: 3em;
+  font-weight: 100!important;
+  letter-spacing: .03em;
+  color: #ffffff;
+  font-family: 'Raleway', 'Helvetica', 'Arial', sans-serif;
+  margin-bottom: 8%;
+}
+
+.viskiSlide p {
+  font-size: 1.3em;
+  line-height: 1.5em;
+  letter-spacing: .06em;
+  color: #ffffff;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  font-weight: 200;
+}
+
+.viskiSlide button {
+  text-align: center;
+  margin-top: 5%;
+  border-style: solid;
+  border-width: 2px;
+  color: #ffffff;
+  border-color: #ffffff;
+  letter-spacing: .08em;
+  background-color: transparent;
+  font-family: 'Source Sans Pro', 'Helvetica', 'Arial', sans-serif;
+  font-size: 1.3em;
+  font-weight: 100;
+  text-transform: uppercase;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  -o-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+}
+
+  .viskiSlide button:hover {
+  color: #444444;
+  background-color: #ffffff;
+  -o-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* ~~~Host Slider Styles~~~ */
+
+.hostSlide {
+  width: 100%;
+  text-align: center;
+}
+.hostSlide h4 {
+  font-size: 3em;
+  font-weight: 100!important;
+  letter-spacing: .03em;
+  color: #ffffff;
+  font-family: 'Raleway', 'Helvetica', 'Arial', sans-serif;
+  margin-bottom: 8%;
+}
+
+.hostSlide p {
+  font-size: 1.3em;
+  line-height: 1.5em;
+  letter-spacing: .06em;
+  color: #ffffff;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  font-weight: 200;
+}
+
+.hostSlide button {
+  text-align: center;
+  margin-top: 5%;
+  border-style: solid;
+  border-width: 2px;
+  color: #ffffff;
+  border-color: #ffffff;
+  letter-spacing: .08em;
+  background-color: transparent;
+  font-family: 'Source Sans Pro', 'Helvetica', 'Arial', sans-serif;
+  font-size: 1.3em;
+  font-weight: 100;
+  text-transform: uppercase;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  -o-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+}
+
+  .hostSlide button:hover {
+  color: #444444;
+  background-color: #ffffff;
+  -o-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+}
